Fixed scrollbar

--- a/src/app/features/components/preview-grid/preview-grid.component.scss
+++ b/src/app/features/components/preview-grid/preview-grid.component.scss
@@ -51,4 +51,5 @@
 
 .customGrid {
   background-color: #FFFFFF;
+  overflow-y: overlay;
 }
